manifests/memory/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memory
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    gateway-access: "true"
