manifests/memory/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: memory
  namespace: memory
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - memory.infra.tgy.io
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: memory
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
